Overhauled sizing UI: * Added padding support * Streamlined UI: No longer can specify both Width and Max Width, simply a checkbox to allow Anamorphic support, Custom Anamorphic gone in favor of Manual sizing * Moved rotation to Sizing tab * Renamed tabs Picture -> Sizing, Video -> Video Encoding * Removed Pixel Aspect Ratio information in input/output preview boxes if PAR is 1:1. * Sections within Sizing tab now wrap dynamically, supporting more window sizes.

--- a/VidCoder/Resources/EncodingRes.resx
+++ b/VidCoder/Resources/EncodingRes.resx
@@ -280,9 +280,6 @@ You should set this if you know your playback device only supports a certain pro
   <data name="X264TuneToolTip" xml:space="preserve">
     <value>Tune options to further optimize them for your input content. If you specify a tuning, the changes will be applied after the Preset but before all other parameters.</value>
   </data>
-  <data name="DisplayWidthToolTip" xml:space="preserve">
-    <value>The desired display width of the video. Other parameters such as the Pixel Aspect Ratio will be changed to achieve this.</value>
-  </data>
   <data name="ContainerLabel" xml:space="preserve">
     <value>Container:</value>
   </data>
@@ -301,17 +298,17 @@ You should set this if you know your playback device only supports a certain pro
   <data name="IncludeChapterMarkersCheckBox" xml:space="preserve">
     <value>Include chapter markers</value>
   </data>
-  <data name="TabHeader_Picture" xml:space="preserve">
-    <value>Picture</value>
+  <data name="TabHeader_Sizing" xml:space="preserve">
+    <value>Sizing</value>
   </data>
   <data name="TabHeader_VideoFilters" xml:space="preserve">
     <value>Video Filters</value>
   </data>
-  <data name="TabHeader_Video" xml:space="preserve">
-    <value>Video</value>
+  <data name="TabHeader_VideoEncoding" xml:space="preserve">
+    <value>Video Encoding</value>
   </data>
-  <data name="TabHeader_Audio" xml:space="preserve">
-    <value>Audio</value>
+  <data name="TabHeader_AudioEncoding" xml:space="preserve">
+    <value>Audio Encoding</value>
   </data>
   <data name="TabHeader_Advanced" xml:space="preserve">
     <value>Advanced Video</value>
@@ -352,35 +349,14 @@ You should set this if you know your playback device only supports a certain pro
   <data name="MaxHeightLabel" xml:space="preserve">
     <value>Max Height:</value>
   </data>
-  <data name="KeepAspectRatioCheckBox" xml:space="preserve">
-    <value>Keep Aspect Ratio</value>
-  </data>
-  <data name="AnamorphicLabel" xml:space="preserve">
-    <value>Anamorphic:</value>
-  </data>
   <data name="ModulusLabel" xml:space="preserve">
     <value>Modulus:</value>
-  </data>
-  <data name="DisplayWidthRadioButton" xml:space="preserve">
-    <value>Display Width:</value>
   </data>
   <data name="OutputLabel" xml:space="preserve">
     <value>Output</value>
   </data>
   <data name="CroppingLabel" xml:space="preserve">
     <value>Cropping</value>
-  </data>
-  <data name="Top" xml:space="preserve">
-    <value>Top</value>
-  </data>
-  <data name="Left" xml:space="preserve">
-    <value>Left</value>
-  </data>
-  <data name="Bottom" xml:space="preserve">
-    <value>Bottom</value>
-  </data>
-  <data name="Right" xml:space="preserve">
-    <value>Right</value>
   </data>
   <data name="DetelecineLabel" xml:space="preserve">
     <value>Detelecine:</value>
@@ -962,7 +938,7 @@ Bicubic: This is an OpenCL hardware accelerated scaling algorithm.</value>
     <value>If the input track matches the codec it will be passed through instead of encoded.</value>
   </data>
   <data name="ScalingAlgorithmLabel" xml:space="preserve">
-    <value>Scaling Algorithm:</value>
+    <value>Scaling algorithm:</value>
   </data>
   <data name="RotationLabel" xml:space="preserve">
     <value>Rotation:</value>
@@ -1009,5 +985,66 @@ Bicubic: This is an OpenCL hardware accelerated scaling algorithm.</value>
   </data>
   <data name="InterlaceDetectionLabel" xml:space="preserve">
     <value>Interlace Detection:</value>
+  </data>
+  <data name="ModeLabel" xml:space="preserve">
+    <value>Mode:</value>
+    <comment>Label for the sizing or padding mode.</comment>
+  </data>
+  <data name="AnamorphicCheckbox" xml:space="preserve">
+    <value>Use Anamorphic</value>
+  </data>
+  <data name="AllowUpscalingCheckbox" xml:space="preserve">
+    <value>Allow upscaling</value>
+  </data>
+  <data name="SizingModeManual" xml:space="preserve">
+    <value>Manual</value>
+    <comment>Choice for the user to enter all sizing information manually.</comment>
+  </data>
+  <data name="UpscaleMaxFormat" xml:space="preserve">
+    <value>Upscale {0}x max</value>
+    <comment>Label for scaling option to allow upscaling, but only to a particular multiple of the source resolution. {0} is the multiple, e.g. 2, 3 or 4</comment>
+  </data>
+  <data name="ScalingMode_DownscaleOnly" xml:space="preserve">
+    <value>Downscale only</value>
+  </data>
+  <data name="ScalingMode_Fill" xml:space="preserve">
+    <value>Scale up/down to target</value>
+  </data>
+  <data name="ScalingModeLabel" xml:space="preserve">
+    <value>Scaling mode:</value>
+  </data>
+  <data name="PaddingMode_Fill" xml:space="preserve">
+    <value>Fill</value>
+  </data>
+  <data name="PaddingMode_Width" xml:space="preserve">
+    <value>Width</value>
+  </data>
+  <data name="PaddingMode_Height" xml:space="preserve">
+    <value>Height</value>
+  </data>
+  <data name="TargetWidthLabel" xml:space="preserve">
+    <value>Target Width:</value>
+  </data>
+  <data name="TargetHeightLabel" xml:space="preserve">
+    <value>Target Height:</value>
+  </data>
+  <data name="PadColorLabel" xml:space="preserve">
+    <value>Color:</value>
+  </data>
+  <data name="ColorPickerAdvancedButton" xml:space="preserve">
+    <value>Advanced</value>
+  </data>
+  <data name="ColorPickerStandardButton" xml:space="preserve">
+    <value>Standard</value>
+  </data>
+  <data name="ColorPickerStandardColorsHeader" xml:space="preserve">
+    <value>Standard colors</value>
+  </data>
+  <data name="AnamorphicToolTip" xml:space="preserve">
+    <value>With Anamorphic enabled, non-square pixels are allowed. This can result in more efficient storage, but not all players support this.</value>
+  </data>
+  <data name="ResolutionLabel" xml:space="preserve">
+    <value>Resolution:</value>
+    <comment>Label for a video resolution in pixels.</comment>
   </data>
 </root>
