Added option in file menu to enqueue a folder of video files. Added error checking to the result of the disc folder picker. If it's not recognized as a disc folder, it will be queued as a folder of video files. Updated icon of DVD/Blu-ray Folder source icon to include a disc.

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -649,4 +649,7 @@
   <data name="SizingPresetUpgradeWarning" xml:space="preserve">
     <value>Warning: The sizing interface has been overhauled for 2.0, so your presets may have changed. You may want to inspect them and ensure that they are still set up correctly.</value>
   </data>
+  <data name="EnqueueFolderOfVideoFiles" xml:space="preserve">
+    <value>Enqueue Folder of Video Files...</value>
+  </data>
 </root>
