--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -345,11 +345,6 @@
 
 {1}</value>
   </data>
-  <data name="QueueMultipleScanErrorMessage" xml:space="preserve">
-    <value>The following file(s) could not be recognized and were not added to the queue:
-
-{0}</value>
-  </data>
   <data name="QueueMultipleScanErrorTitle" xml:space="preserve">
     <value>Error scanning video file(s)</value>
   </data>
@@ -651,5 +646,10 @@
   </data>
   <data name="EnqueueFolderOfVideoFiles" xml:space="preserve">
     <value>Enqueue Folder of Video Files...</value>
+  </data>
+  <data name="QueueMultipleScanErrorMessage" xml:space="preserve">
+    <value>There were errors scanning some files and they were not added to the queue:
+
+{0}</value>
   </data>
 </root>
