Added translations for 32-bit OS warning message.

--- a/VidCoder/Resources/CommonRes.cs.resx
+++ b/VidCoder/Resources/CommonRes.cs.resx
@@ -252,4 +252,7 @@ Tento program je rozšiřován v naději že bude užitečný, ale BEZ JAKÉKOLI
   <data name="FileFailureErrorTitle" xml:space="preserve">
     <value>Chyba při operaci s tímto souborem</value>
   </data>
+  <data name="UpdatesDisabled32BitOSMessage" xml:space="preserve">
+    <value>Aktualizace byly zakázány protože nové verze již nepodporují 32-bitové operační systémy.</value>
+  </data>
 </root>
